--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@mui/x-charts": "^7.24.0",
     "@prisma/client": "^6.2.1",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "next": "15.1.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
