--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-time-picker": "^7.0.0",
+    "rsuite": "^5.77.0"
   },
   "devDependencies": {
     "@types/date-fns": "^2.5.3",
